@@ -44,12 +44,12 @@ REFS =  \
 	$(GTK_SHARP_LIBS) \
 	$(MONO_ADDINS_LIBS) \
 	-r:$(top_builddir)/build/bin/Mono.TextEditor.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Components.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Core.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Core.Gui.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Ide.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Projects.dll \
-	-r:$(top_srcdir)/build/bin/MonoDevelop.Projects.Gui.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Components.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Core.Gui.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Ide.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Projects.dll \
+	-r:$(top_builddir)/build/bin/MonoDevelop.Projects.Gui.dll \
 	-r:Mono.Posix \
 	-r:System \
 	-r:System.Xml
